# spacecraft-dynamics-control

./: .eslintrc.json  .gitignore  LICENSE  README.html  README.md  check_project.py  index.html  init_project.sh  package-lock.json  package.json  pyproject.toml  quick_start.py  requirements.txt  setup.cfg  setup.py  test-math.html  test-math.js  test_installation.py  tsconfig.json  vite.config.ts
README_files/libs/bootstrap/: bootstrap-49be455ab71eec21615579defd607936.min.css
applications/mission_simulations/earth_observation/: precise_pointing.py
case_studies/textbook_problems/chapter_05/: problem_5_1_torque_free_axisymmetric.py
case_studies/textbook_problems/chapter_06/: problem_6_1_keplerian_orbit.py
spacecraft_dynamics_control/attitude_dynamics/dynamics/: __init__.py  rigid_body_dynamics.py
spacecraft_dynamics_control/attitude_dynamics/kinematics/: __init__.py
spacecraft_dynamics_control/coordinate_systems/: __init__.py  coordinate_transformations.py  quaternion_operations.py  reference_frames.py  rotation_matrices.py
src/: main.ts
src/core/: Application.ts  EventBus.ts  ServiceContainer.ts  StateManager.ts
src/engine/mathematics/: MathematicalEngine.ts  examples.ts  index.ts  simple-test.js  simple-test.ts  test.ts
src/engine/mathematics/core/: Matrix.ts  Quaternion.ts  Vector2D.ts  Vector3D.ts
src/engine/physics/: PhysicsEngine.ts
src/engine/rendering/: RenderPipeline.ts
visualizations/python/: __init__.py
visualizations/python/advanced_plots/: __init__.py  attitude_animations.py  orbital_3d.py
