[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spacecraft-dynamics-control"
version = "0.1.0"
description = "Educational material on spacecraft dynamics and control"
authors = [
    {name = "Emanuel Quintana", email = "emanuel.quintana@example.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["spacecraft", "dynamics", "control", "aerospace", "education"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "plotly>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/emanuelquintana/spacecraft-dynamics-control"

[tool.setuptools.packages.find]
where = ["."]
include = ["visualizations*", "applications*", "case_studies*", "spacecraft_dynamics_control*"]
