[metadata]
name = spacecraft-dynamics-control
version = 0.1.0
author = Emanuel Quintana
author_email = emanuel.quintana@example.com
description = Educational material on spacecraft dynamics and control
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/emanuelquintana/spacecraft-dynamics-control
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Aerospace

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.21.0
    scipy>=1.7.0
    matplotlib>=3.5.0
    plotly>=5.0.0
    jupyter>=1.0.0
    pandas>=1.3.0
    sympy>=1.8

[options.packages.find]
where = .
include =
    visualizations*
    applications*
    case_studies*

[options.extras_require]
dev =
    pytest>=6.0
    pytest-cov
    black
    flake8
docs =
    sphinx
    sphinx-rtd-theme
    nbsphinx
